apps/Announcements/index.scss
.Window_Announcements {
  @import "./node_modules/materialize-css/sass/materialize";
  height: 100%;
  margin: 0;
  padding: 0;
  width: 100%;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
  sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}


html, body {
  height: 100%;
  margin: 0;
  padding: 0;
  width: 100%;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
  sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

#root {
  height: 100%;
}



.App {
  height: 100%;

}

.Announcement-visuals {
  height:100%;
  background-color: grey;
  text-align: center;
}

#Announ-visual {
  max-width: 100%; 
  height: 99%;
  margin-top: 2px;
  object-fit: cover;
  object-position: center;
}

.Announcement-content {
  height:100%;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
  sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow-y:auto;
}


h6 {
  white-space: normal;
  font-weight: bolder;
}

.announcement-slider {
  position: relative;
  width: 100%;
  margin: 0 auto;
  height: 100%;
  overflow: hidden;
  white-space: nowrap;
}

h4 {
  font-size: 10px;
}

p {
  white-space: normal;
  letter-spacing: 0.03em;
  text-rendering: optimizelegibility;
  line-height: 1.2em;
}

.slider-wrapper {
  position: relative;
  height: 100%;
  width: 100%;
}

.slide {
  display: inline-block;
  height: 100%;
  width: 100%;
}

.arrow {
  height: 50px;
  width: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  cursor: pointer;
  transition: transform ease-in .1s;
  opacity: 0.3;
}

div.arrow:hover {
  opacity: 1;
  background-color: white;
}

.nextArrow {
  position: absolute;
  top: 85%;
  right: 30%;
  z-index: 999;
  color: #fff;
}

.backArrow {
  position: absolute;
  top: 85%;
  left: 30%;
  z-index: 999;
  color: #fff;
}

.fa-arrow-right:before, .fa-arrow-left:before {
  color: #222
}


#video{
  max-width: 100%;
  height: 80%;  
}

